# serializer version: 1
# name: test_blast[None]
  dict({
    'analysis_id': 'foobar',
    'created_at': '2015-10-06T20:00:00Z',
    'error': None,
    'id': 2,
    'interval': 3,
    'last_checked_at': '2015-10-06T20:00:00Z',
    'ready': False,
    'result': None,
    'rid': None,
    'sequence_index': 5,
    'task_id': None,
    'updated_at': '2015-10-06T20:00:00Z',
  })
# ---
# name: test_finalize[None]
  dict({
    'created_at': '2015-10-06T20:00:00Z',
    'files': list([
    ]),
    'id': 'analysis1',
    'index': dict({
      'id': 'foo',
      'version': 2,
    }),
    'job': dict({
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': '7cf872dc',
      'progress': 50,
      'stage': 'JURZHTCWaKMqqBTFitpK',
      'state': 'timeout',
      'user': dict({
        'handle': 'zclark',
        'id': 'fb085f7f',
      }),
      'workflow': 'jobs_aodp',
    }),
    'ml': None,
    'ready': True,
    'reference': dict({
      'data_type': 'genome',
      'id': 'baz',
      'name': 'Baz',
    }),
    'results': dict({
      'hits': list([
      ]),
    }),
    'sample': dict({
      'id': 'sample1',
    }),
    'subtractions': list([
    ]),
    'updated_at': '2015-10-06T20:00:00Z',
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'workflow': 'nuvs',
  })
# ---
# name: test_finalize[None].1
  dict({
    '_id': 'analysis1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': list([
    ]),
    'index': dict({
      'id': 'foo',
      'version': 2,
    }),
    'job': dict({
      'id': '7cf872dc',
    }),
    'ready': True,
    'reference': dict({
      'id': 'baz',
    }),
    'results': 'sql',
    'sample': dict({
      'id': 'sample1',
    }),
    'subtractions': list([
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'workflow': 'nuvs',
  })
# ---
# name: test_find
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'test_1',
        'index': dict({
          'id': 'foo',
          'version': 2,
        }),
        'job': dict({
          'archived': False,
          'created_at': '2015-10-06T20:00:00Z',
          'id': '3cbb22cc',
          'progress': 50,
          'stage': 'JURZHTCWaKMqqBTFitpK',
          'state': 'timeout',
          'user': dict({
            'handle': 'zclark',
            'id': '7cf872dc',
          }),
          'workflow': 'jobs_aodp',
        }),
        'ml': None,
        'ready': True,
        'reference': dict({
          'data_type': 'genome',
          'id': 'baz',
          'name': 'Baz',
        }),
        'sample': dict({
          'id': 'test',
        }),
        'subtractions': list([
        ]),
        'updated_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
        'workflow': 'pathoscope_bowtie',
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'test_2',
        'index': dict({
          'id': 'foo',
          'version': 2,
        }),
        'job': dict({
          'archived': False,
          'created_at': '2015-10-06T20:00:00Z',
          'id': '3cbb22cc',
          'progress': 50,
          'stage': 'JURZHTCWaKMqqBTFitpK',
          'state': 'timeout',
          'user': dict({
            'handle': 'zclark',
            'id': '7cf872dc',
          }),
          'workflow': 'jobs_aodp',
        }),
        'ml': None,
        'ready': True,
        'reference': dict({
          'data_type': 'genome',
          'id': 'baz',
          'name': 'Baz',
        }),
        'sample': dict({
          'id': 'test',
        }),
        'subtractions': list([
          dict({
            'id': 'foo',
            'name': 'Malus domestica',
          }),
        ]),
        'updated_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
        'workflow': 'pathoscope_bowtie',
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'test_3',
        'index': dict({
          'id': 'foo',
          'version': 2,
        }),
        'job': None,
        'ml': None,
        'ready': True,
        'reference': dict({
          'data_type': 'genome',
          'id': 'foo',
          'name': 'Foo',
        }),
        'sample': dict({
          'id': 'test',
        }),
        'subtractions': list([
        ]),
        'updated_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
        'workflow': 'pathoscope_bowtie',
      }),
    ]),
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_get[None-False-False]
  dict({
    'created_at': '2015-10-06T20:00:00Z',
    'files': list([
      dict({
        'analysis': 'foobar',
        'description': None,
        'format': 'fasta',
        'id': 1,
        'name': 'reference.fa',
        'name_on_disk': '1-reference.fa',
        'size': None,
        'uploaded_at': None,
      }),
    ]),
    'id': 'foobar',
    'index': dict({
      'id': 'bar',
      'version': 3,
    }),
    'job': dict({
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': '3cbb22cc',
      'progress': 100,
      'stage': 'JURZHTCWaKMqqBTFitpK',
      'state': 'complete',
      'user': dict({
        'handle': 'zclark',
        'id': '7cf872dc',
      }),
      'workflow': 'jobs_aodp',
    }),
    'ml': None,
    'ready': True,
    'reference': dict({
      'data_type': 'genome',
      'id': 'baz',
      'name': 'Baz',
    }),
    'results': dict({
      'hits': list([
      ]),
    }),
    'sample': dict({
      'id': 'baz',
    }),
    'subtractions': list([
      dict({
        'id': 'apple',
        'name': 'Apple',
      }),
      dict({
        'id': 'plum',
        'name': 'Plum',
      }),
    ]),
    'updated_at': '2015-10-06T20:00:00Z',
    'user': dict({
      'handle': 'leeashley',
      'id': 'fb085f7f',
    }),
    'workflow': 'pathoscope_bowtie',
  })
# ---
# name: test_get[None-True-True]
  dict({
    'created_at': '2015-10-06T20:00:00Z',
    'files': list([
      dict({
        'analysis': 'foobar',
        'description': None,
        'format': 'fasta',
        'id': 1,
        'name': 'reference.fa',
        'name_on_disk': '1-reference.fa',
        'size': None,
        'uploaded_at': None,
      }),
    ]),
    'id': 'foobar',
    'index': dict({
      'id': 'bar',
      'version': 3,
    }),
    'job': dict({
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': '3cbb22cc',
      'progress': 100,
      'stage': 'JURZHTCWaKMqqBTFitpK',
      'state': 'complete',
      'user': dict({
        'handle': 'zclark',
        'id': '7cf872dc',
      }),
      'workflow': 'jobs_aodp',
    }),
    'ml': None,
    'ready': True,
    'reference': dict({
      'data_type': 'genome',
      'id': 'baz',
      'name': 'Baz',
    }),
    'results': dict({
      'hits': list([
      ]),
    }),
    'sample': dict({
      'id': 'baz',
    }),
    'subtractions': list([
      dict({
        'id': 'apple',
        'name': 'Apple',
      }),
      dict({
        'id': 'plum',
        'name': 'Plum',
      }),
    ]),
    'updated_at': '2015-10-06T20:00:00Z',
    'user': dict({
      'handle': 'leeashley',
      'id': 'fb085f7f',
    }),
    'workflow': 'pathoscope_bowtie',
  })
# ---
# name: test_upload_file[None]
  dict({
    'analysis': 'foobar',
    'description': None,
    'format': 'fasta',
    'id': 1,
    'name': 'reference.fa',
    'name_on_disk': '1-reference.fa',
    'size': 20466,
    'uploaded_at': '2015-10-06T20:00:00Z',
  })
# ---
# name: test_upload_file[None].1
  dict({
    'analysis': 'foobar',
    'description': None,
    'format': 'fasta',
    'id': 2,
    'name': 'reference.fa',
    'name_on_disk': '2-reference.fa',
    'size': 20466,
    'uploaded_at': '2015-10-06T20:00:00Z',
  })
# ---
